--- a/photos/templates/navbar.html
+++ b/photos/templates/navbar.html
@@ -1,23 +1,17 @@
-<nav class="navbar navbar-inverse">
+ <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5" >
     <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="{% url 'gallery' %}">The Moringa Tribune</a>
-      </div>
+      <a class="navbar-brand" href="{% url 'gallery' %}">The PhotoApp</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-      <!-- Adding a search form  -->
-      <div class="col-sm-4 col-md-4 navbar-right">
-
-        <form class="navbar-form" role="search" action="{% url 'search_results' %}">
-
-          <div class="input-group">
-            <input type="text" class="form-control" placeholder="Search Photo" name="Photo">
-            <div class="input-group-btn">
-              <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-            </div>
-          </div>
-
+        </ul>
+        <form class="d-flex" action= "{% url 'search_results' %}">
+          <input type="text" class="form-control" placeholder="Search Photo" name="image">
+          <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
       </div>
-      <!-- search form end -->
     </div>
   </nav>
