--- a/photos/templates/photos/add.html
+++ b/photos/templates/photos/add.html
@@ -17,7 +17,7 @@
           <div class= "card">
 
             
-            <form method="POST" action="" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'add' %}" enctype="multipart/form-data">
                 {% csrf_token %}
 
                 <div class="form-group m-3">
