--- a/photos/templates/search.html
+++ b/photos/templates/search.html
@@ -1,25 +1,25 @@
-{%extends 'photos/base.html'%} 
-{% block content %}
+
 <div class="container">
 
   <div class="row">
-    {% if articles%}
-      <h2>Found {{ category|length }} of searched term {{message}}</h2>
-    {% else %}
-      <h2> Found 0 images for the search term {{message}}</h2>
+    {% if images%}
+      <h2>Found {{ images|length }} of searched term {{message}}</h2>
+     
     {% endif %}
 
   </div>
 
   <div class="row">
 
-  {% if articles %}
-    {% for category in categories %}
+  {% if images %}
+    {% for image in images %}
       <div class="col-sm-6 col-md-3">
-          <h1>{{category.name}}</h1>
+         <img src="{{ image.image.url }}" alt="">
+          <h1>{{image.category}}</h1>
       </div>
+      {% empty %}
+      <h2> Found 0 images for the search term {{message}}</h2>
     {% endfor %}
   {% endif %}
   </div>
 </div>
-{% endblock %}
